--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <nav class="d-flex align-items-center">
                 <ul class="ul__navbar--mobile m-0 p-0">
                   <li><a href="">HOME</a></li>
-                  <li>
+                  <li class="li__indumentaria">
                     INDUMENTARIA +
 
                     <ul class="ul__hide ps-4" style="display: none">
@@ -188,21 +188,8 @@
     ></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> -->
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase.js"></script>
-    <script>
-      const firebaseConfig = {
-        apiKey: "AIzaSyAHJtu7kxN_bRpDQMqvB--AMcQNtYd3-kE",
-        authDomain: "prueba-104e5.firebaseapp.com",
-        projectId: "prueba-104e5",
-        storageBucket: "prueba-104e5.appspot.com",
-        messagingSenderId: "799653477259",
-        appId: "1:799653477259:web:339c78ddf189271c97cd8e",
-      };
-
-      firebase.initializeApp(firebaseConfig);
-    </script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
