--- a/index.html
+++ b/index.html
@@ -186,9 +186,22 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> -->
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyAHJtu7kxN_bRpDQMqvB--AMcQNtYd3-kE",
+        authDomain: "prueba-104e5.firebaseapp.com",
+        projectId: "prueba-104e5",
+        storageBucket: "prueba-104e5.appspot.com",
+        messagingSenderId: "799653477259",
+        appId: "1:799653477259:web:339c78ddf189271c97cd8e",
+      };
+
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
     <script src="js/main.js"></script>
   </body>
