--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
           </button>
         </div>
       </section>
+
+      <section class="productos"></section>
     </main>
 
     <footer></footer>
@@ -189,7 +191,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script> -->
     <script>
       const firebaseConfig = {
         apiKey: "AIzaSyAHJtu7kxN_bRpDQMqvB--AMcQNtYd3-kE",
@@ -202,7 +203,7 @@
 
       firebase.initializeApp(firebaseConfig);
     </script>
-
+    <script src="js/firebaseConfig.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
