--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
         </div>
       </section>
 
-      <section class="productos"></section>
+      <!-- esto es solo de prueba -->
+      <section class="productos row d-flex justify-content-between"></section>
     </main>
 
     <footer></footer>
