--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </header>
 
     <main>
-      <section class="carousel__section">
+      <section class="carousel__container">
         <div
           id="carouselExampleIndicators"
           class="carousel slide"
@@ -178,7 +178,9 @@
       </section>
 
       <!-- esto es solo de prueba -->
-      <section class="productos row d-flex justify-content-between"></section>
+      <section class="productos__container container">
+        <section class="productos row d-flex justify-content-between"></section>
+      </section>
     </main>
 
     <footer></footer>
