--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </section>
 
       <!-- esto es solo de prueba -->
-      <section class="productos__container container">
+      <section class="productos__container container mt-3">
         <section class="productos row d-flex justify-content-between"></section>
       </section>
     </main>
