Creacion Footer, Logo WhatsApp fixed y margenes body

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body style="margin: 0 50px; background-color: black;">
     <header>
       <!-- desktop version, desaparece en mobile version -->
       <section class="desktop__header justify-content-between container">
@@ -183,7 +183,22 @@
       </section>
     </main>
 
-    <footer></footer>
+    <!-- Logo WhatsApp -->
+    <div class="item-fixed">
+      <a href="https://wa.link/988yaj"><img src="./assets/svg/whatsapp.svg" alt="logo de WhatsApp"></a>
+    </div>
+
+    <footer>
+        <ul>
+          <li><a href="https://www.instagram.com/ropadeportiva_mf/?hl=es-la"><i class="fab fa-instagram"></i> ropadeportiva_mf</a></li>
+          <li><a href="https://goo.gl/maps/A44rshH9tYgrhWUJA"><i class="fas fa-map-marker-alt"></i> Showroom - Rosario Centro</a></li>
+          <li><a href="https://wa.link/988yaj"><i class="fab fa-whatsapp"></i> (3402) 44-9859</a></li>
+        </ul>
+    </footer>
+
+
+    <!-- Font Awesome (logos footer) -->
+    <script src="https://kit.fontawesome.com/c6b5081700.js" crossorigin="anonymous"></script>
 
     <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
