Agregue un parrafo de prueba

--- a/index.html
+++ b/index.html
@@ -181,6 +181,30 @@
       <section class="productos__container container mt-3">
         <section class="productos row d-flex justify-content-between"></section>
       </section>
+
+      <!-- parrafo de prueba -->
+      <p style="padding: 10px 20px;">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias blanditiis odio molestias, cumque minima unde vitae accusantium labore omnis voluptate delectus modi non saepe iusto quibusdam ipsa maiores voluptates soluta.
+        Impedit voluptatem quibusdam officia! Repellat tempora fuga vel ea, commodi doloremque autem eos distinctio officia sit incidunt odit hic facere optio corrupti, saepe illo deleniti. Ratione hic sequi reprehenderit veniam!
+        Earum eligendi quo vero autem dolores tenetur tempora blanditiis accusantium omnis! Dolore quod voluptas ab corporis recusandae fugiat rerum provident, earum cupiditate repellendus iure assumenda fugit nemo vel a eum!
+        Ratione doloribus soluta aspernatur. Sint magnam id modi aliquam reiciendis veniam mollitia voluptatum rem voluptatibus excepturi quis dolorum nostrum sunt aspernatur, praesentium sed perspiciatis vero cum hic amet. Perspiciatis, magni!
+        Eaque corporis nihil cum, exercitationem dicta sapiente assumenda ratione, delectus, veritatis autem fugiat! Nisi temporibus excepturi obcaecati et architecto esse earum ipsum assumenda labore, magni minus sit, recusandae voluptatem ipsa.
+        Iusto dicta porro, repudiandae hic suscipit iste deleniti ipsum necessitatibus fugit consequuntur quisquam omnis quos eum eveniet enim sunt. Quaerat accusantium distinctio veniam repellendus quas eius animi deserunt eum fugit?
+        Reprehenderit doloribus maiores dignissimos eos praesentium? Provident mollitia corporis voluptatem accusantium fugiat recusandae. Sed, illo ducimus voluptates debitis unde laborum fugiat ut aliquid. Ratione harum numquam asperiores aut laudantium dignissimos?
+        Impedit sequi accusantium possimus, minima facilis officiis delectus suscipit perferendis tenetur ducimus incidunt dolores sint! Quia maxime cumque fuga cupiditate, repudiandae neque recusandae nobis magnam voluptatum, enim quisquam, dolor a!
+        Labore iste, saepe porro amet doloremque delectus similique excepturi quos pariatur animi dignissimos consequuntur suscipit illo placeat quia! Officia ab maxime nobis maiores omnis illum? Officia deleniti odit minus cum.
+        Magni alias at ex cupiditate harum repudiandae, excepturi, molestias libero numquam veritatis cum voluptate culpa sint dicta assumenda vitae dignissimos molestiae hic rerum optio quas aut! Dignissimos tempora omnis maxime.
+        Quo corporis nostrum voluptas illum quidem deleniti! Tempora, placeat alias. Ullam voluptatum error fugit quod sapiente, quas quam nisi explicabo tenetur magni quibusdam deserunt optio voluptatibus cum numquam mollitia perferendis.
+        Natus, quos? Nulla alias sint enim repudiandae animi est vero ea fugiat aliquam commodi ex impedit dolorum odio delectus eum debitis illo velit ducimus eligendi a, mollitia odit amet. Odit!
+        Minus illo at incidunt, tempore, porro quia quaerat blanditiis soluta odio enim minima sed harum ab doloribus. Dolore facilis distinctio, voluptatum, mollitia libero eveniet suscipit modi enim minima unde laborum.
+        Obcaecati harum veritatis optio quo ipsa. Maiores eum quis quas, ipsam tempore necessitatibus temporibus quia voluptatem dicta accusamus dolorum doloremque quae commodi minus ex reiciendis iste laborum unde officia ad.
+        Eveniet quibusdam, at dolorum rem tempore voluptates facere beatae? Rerum, perspiciatis corporis. Magni necessitatibus est incidunt, doloremque, corporis fugiat velit tempore excepturi ducimus corrupti facilis dolor non laudantium ex consectetur.
+        Illo harum quos dignissimos perspiciatis deleniti temporibus, nemo, eaque sequi doloremque deserunt aspernatur modi omnis hic laborum necessitatibus possimus qui error cum eveniet, ea ipsum iure? Aut atque eaque assumenda.
+        Assumenda dolore hic saepe reprehenderit sunt laboriosam molestias velit asperiores nemo. Architecto, ex ad. Ullam neque quo officia sapiente tempora sit quia labore, adipisci nostrum eius doloribus deleniti optio fugiat!
+        Optio veritatis exercitationem, consequatur eveniet dolorem commodi eum repellat fugit similique soluta hic illum? Consectetur rem at nostrum aut porro ipsa totam qui sint, tenetur dolorem illum excepturi sit reprehenderit?
+        Repudiandae deserunt magnam maxime eaque soluta beatae dicta tenetur atque consequuntur commodi, vel fugit rerum porro dignissimos, doloribus saepe? Harum ea fuga exercitationem, quaerat recusandae quasi perspiciatis officiis quam sint.
+        Voluptatum consequatur doloribus eaque eum corrupti, veniam praesentium minus? Quasi reprehenderit mollitia vel praesentium nobis reiciendis. Voluptatibus quibusdam velit recusandae culpa itaque, autem, consequatur sequi numquam repellendus sapiente quaerat? Aliquid.
+      </p>
     </main>
 
     <!-- Logo WhatsApp -->
