logo de whatsapp editado

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       </p>
 
       <!-- Logo WhatsApp -->
-      <div class="item-fixed">
+      <div class="item-fixed d-flex justify-content-end container">
         <a href="https://wa.link/988yaj"
           ><img src="./assets/svg/whatsapp.svg" alt="logo de WhatsApp"
         /></a>
