Informacion sobre envios, metodos de pago y WhatsApp al final del main

--- a/index.html
+++ b/index.html
@@ -254,6 +254,23 @@
         numquam repellendus sapiente quaerat? Aliquid.
       </p>
 
+      <di class="info">
+        <ul>
+          <li><i class="fas fa-shipping-fast"></i>
+            <p>¡Envíos a todo el país!</p>
+          </li>
+          <li><i class="far fa-credit-card"></i>
+            <p>Todos los medios de pago</p>
+          </li>
+          <li><i class="fab fa-whatsapp"></i>
+            <p>¡Hablanos por WhatsApp!</p>
+          </li>
+        </ul>
+      </div>
+
+
+
+
       <!-- Logo WhatsApp -->
       <div class="item-fixed container">
         <a href="https://wa.link/988yaj"
