--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
 
       <!-- esto es solo de prueba -->
       <section class="productos__container container mt-3">
+        <ul class="ul__categorias">
+          <li class="remeras" value="Remeras">Remeras</li>
+          <li class="musculosas" value="Musculosas">Musculosas</li>
+          <li class="shorts" value="Shorts">Shorts</li>
+          <li class="calzas" value="Calzas">Calzas</li>
+        </ul>
+
         <section class="productos row d-flex justify-content-between"></section>
       </section>
 
@@ -254,22 +261,22 @@
         numquam repellendus sapiente quaerat? Aliquid.
       </p>
 
-      <di class="info">
+      <div class="info">
         <ul>
-          <li><i class="fas fa-shipping-fast"></i>
+          <li>
+            <i class="fas fa-shipping-fast"></i>
             <p>¡Envíos a todo el país!</p>
           </li>
-          <li><i class="far fa-credit-card"></i>
+          <li>
+            <i class="far fa-credit-card"></i>
             <p>Todos los medios de pago</p>
           </li>
-          <li><i class="fab fa-whatsapp"></i>
+          <li>
+            <i class="fab fa-whatsapp"></i>
             <p>¡Hablanos por WhatsApp!</p>
           </li>
         </ul>
       </div>
-
-
-
 
       <!-- Logo WhatsApp -->
       <div class="item-fixed container">
