--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
       <!-- esto es solo de prueba -->
       <section class="productos__container container mt-3">
         <ul class="ul__categorias">
-          <li class="remeras" value="Remeras">Remeras</li>
-          <li class="musculosas" value="Musculosas">Musculosas</li>
-          <li class="shorts" value="Shorts">Shorts</li>
-          <li class="calzas" value="Calzas">Calzas</li>
+          <li class="todos">Todos los productos</li>
+          <li class="remeras">Remeras</li>
+          <li class="musculosas">Musculosas</li>
+          <li class="shorts">Shorts</li>
+          <li class="calzas">Calzas</li>
         </ul>
 
         <section class="productos row d-flex justify-content-between"></section>
