--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
 
       <!-- esto es solo de prueba -->
       <section class="productos__container container mt-3">
-        <ul class="ul__categorias">
+        <!-- <ul class="ul__categorias">
           <li class="todos">Todos los productos</li>
           <li class="remeras">Remeras</li>
           <li class="musculosas">Musculosas</li>
           <li class="shorts">Shorts</li>
           <li class="calzas">Calzas</li>
-        </ul>
+        </ul> -->
 
         <section class="productos row d-flex justify-content-between"></section>
       </section>
 
       <!-- parrafo de prueba -->
-      <p style="padding: 10px 20px">
+      <!-- <p class="container">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
         blanditiis odio molestias, cumque minima unde vitae accusantium labore
         omnis voluptate delectus modi non saepe iusto quibusdam ipsa maiores
@@ -260,24 +260,24 @@
         reprehenderit mollitia vel praesentium nobis reiciendis. Voluptatibus
         quibusdam velit recusandae culpa itaque, autem, consequatur sequi
         numquam repellendus sapiente quaerat? Aliquid.
-      </p>
+      </p> -->
 
-      <div class="info">
+      <section class="info container">
         <ul>
           <li>
-            <i class="fas fa-shipping-fast"></i>
+            <img src="./assets/svg/car.svg" alt="car-logo" />
             <p>¡Envíos a todo el país!</p>
           </li>
           <li>
-            <i class="far fa-credit-card"></i>
+            <img src="./assets/svg/card.svg" alt="card-logo" />
             <p>Todos los medios de pago</p>
           </li>
           <li>
-            <i class="fab fa-whatsapp"></i>
+            <img src="./assets/svg/whatsapp-black.svg" alt="whatsapp-logo" />
             <p>¡Hablanos por WhatsApp!</p>
           </li>
         </ul>
-      </div>
+      </section>
 
       <!-- Logo WhatsApp -->
       <div class="item-fixed container">
