--- a/index.html
+++ b/index.html
@@ -183,13 +183,14 @@
 
       <!-- esto es solo de prueba -->
       <section class="productos__container container mt-3">
-        <ul class="ul__categorias">
+        <!-- <ul class="ul__categorias">
           <li class="todos">Todos los productos</li>
           <li class="remeras">Remeras</li>
           <li class="musculosas">Musculosas</li>
           <li class="shorts">Shorts</li>
           <li class="calzas">Calzas</li>
-        </ul>
+        </ul> -->
+
         <section class="productos row d-flex justify-content-between"></section>
       </section>
 
