--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="d-flex align-items-center">
           <ul class="ul__navbar d-flex m-0 p-0">
             <li><a href="">HOME</a></li>
-            <li>
-              INDUMENTARIA <span class="indumentaria__span">v</span>
+            <li class="li__indumentaria">
+              INDUMENTARIA <i class="bi bi-chevron-up chevron__rotate"></i>
               <ul>
                 <li class="todos">Todas</li>
                 <li class="remeras">Remeras</li>
