nuevas categorias agregadas

--- a/index.html
+++ b/index.html
@@ -27,11 +27,20 @@
             <li class="li__indumentaria">
               INDUMENTARIA <i class="bi bi-chevron-up chevron__rotate"></i>
               <ul>
-                <li class="todos">Todas</li>
-                <li class="remeras">Remeras</li>
-                <li class="musculosas">Musculosas</li>
-                <li class="shorts">Shorts</li>
-                <li class="calzas">Calzas</li>
+                <div>
+                  <li class="todo">Todo</li>
+                  <li class="abrigos">Abrigos</li>
+                  <li class="calzas">Calzas</li>
+                  <li class="conjuntos">Conjuntos</li>
+                  <li class="hombres">Hombres</li>
+                </div>
+                <div>
+                  <li class="kids">Kids</li>
+                  <li class="pantalones">Pantalones</li>
+                  <li class="remeras">Remeras</li>
+                  <li class="shorts">Shorts</li>
+                  <li class="tops">Tops</li>
+                </div>
               </ul>
             </li>
             <li><a href="">PREGUNTAS FRECUENTES</a></li>
@@ -85,15 +94,26 @@
                     INDUMENTARIA +
 
                     <ul class="ul__hide ps-4" style="display: none">
-                      <li class="todos" data-bs-dismiss="offcanvas">Todas</li>
+                      <li class="todo" data-bs-dismiss="offcanvas">Todo</li>
+                      <li class="abrigos" data-bs-dismiss="offcanvas">
+                        Abrigos
+                      </li>
+                      <li class="calzas" data-bs-dismiss="offcanvas">Calzas</li>
+                      <li class="conjuntos" data-bs-dismiss="offcanvas">
+                        Conjuntos
+                      </li>
+                      <li class="hombres" data-bs-dismiss="offcanvas">
+                        Hombres
+                      </li>
+                      <li class="kids" data-bs-dismiss="offcanvas">Kids</li>
+                      <li class="pantalones" data-bs-dismiss="offcanvas">
+                        Pantalones
+                      </li>
                       <li class="remeras" data-bs-dismiss="offcanvas">
                         Remeras
                       </li>
-                      <li class="musculosas" data-bs-dismiss="offcanvas">
-                        Musculosas
-                      </li>
                       <li class="shorts" data-bs-dismiss="offcanvas">Shorts</li>
-                      <li class="calzas" data-bs-dismiss="offcanvas">Calzas</li>
+                      <li class="tops" data-bs-dismiss="offcanvas">Tops</li>
                     </ul>
                   </li>
                   <li><a href="">PREGUNTAS FRECUENTES</a></li>
