cambios en footer

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     </main>
 
     <footer>
-      <ul>
+      <ul class="container">
         <li>
           <a href="https://www.instagram.com/ropadeportiva_mf/?hl=es-la"
             ><i class="fab fa-instagram"></i> ropadeportiva_mf</a
