precio agregado, nueva fuente, y tamano cards

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <li class="calzas">Calzas</li>
         </ul> -->
 
-        <section class="productos row d-flex justify-content-between"></section>
+        <section class="productos row justify-content-between"></section>
       </section>
 
       <!-- parrafo de prueba -->
