--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <!-- esto es solo de prueba -->
       <section class="productos__container container mt-3">
         <!-- <ul class="ul__categorias">
-          <li class="todos">Todos los productos</li>
+          <li class="todos">Todo</li>
           <li class="remeras">Remeras</li>
           <li class="musculosas">Musculosas</li>
           <li class="shorts">Shorts</li>
