img 404, talle agregado

--- a/404.html
+++ b/404.html
@@ -159,7 +159,7 @@
       </section>
 
       <section class="section__img-404">
-        <img src="./assets/svg/404.svg" alt="404" />
+        <img src="./assets/svg/404.svg" alt="404" width="500" />
       </section>
     </main>
 
