--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
           <ul class="ul__navbar d-flex m-0 p-0">
             <li><a href="./index.html">HOME</a></li>
             <li class="li__indumentaria">
-              <a href="./index.html">INDUMENTARIA</a>
+              INDUMENTARIA
               <img
                 src="./assets/svg/chevron-up.svg"
                 alt="chevron-up"
@@ -143,119 +143,7 @@
     </header>
 
     <main>
-      <section class="carousel__container">
-        <div
-          id="carouselExampleIndicators"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-          </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </section>
-
-      <section class="productos__container container mt-3">
-        <p class="text-center title__productos">NUESTROS PRODUCTOS</p>
-        <ul class="ul__categorias d-flex p-0" id="scroll-hidden">
-          <li class="todo">TODO</li>
-          <li class="abrigos">ABRIGOS</li>
-          <li class="calzas">CALZAS</li>
-          <li class="conjuntos">CONJUNTOS</li>
-          <li class="hombres">HOMBRES</li>
-          <li class="kids">KIDS</li>
-          <li class="pantalones">PANTALONES</li>
-          <li class="remeras">REMERAS</li>
-          <li class="shorts">SHORTS</li>
-          <li class="tops">TOPS</li>
-        </ul>
-
-        <section class="productos row justify-content-between"></section>
-      </section>
-
-      <section class="info container">
-        <ul>
-          <li>
-            <img src="./assets/svg/car.svg" alt="car-logo" />
-            <p>¡Envíos a todo el país!</p>
-          </li>
-          <li>
-            <img src="./assets/svg/card.svg" alt="card-logo" />
-            <p>Todos los medios de pago</p>
-          </li>
-          <li>
-            <img src="./assets/svg/whatsapp-black.svg" alt="whatsapp-logo" />
-            <p>¡Hablanos por WhatsApp!</p>
-          </li>
-        </ul>
-      </section>
-
-      <!-- Logo WhatsApp -->
-      <div class="item-fixed container">
-        <a href="https://wa.link/988yaj"
-          ><img src="./assets/svg/whatsapp.svg" alt="logo de WhatsApp"
-        /></a>
-      </div>
+      <h1>CONTACTO</h1>
     </main>
 
     <footer>
