--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul class="ul__navbar d-flex m-0 p-0">
             <li><a href="./index.html">HOME</a></li>
             <li class="li__indumentaria">
-              <a href="./index.html">INDUMENTARIA</a>
+              INDUMENTARIA
               <img
                 src="./assets/svg/chevron-up.svg"
                 alt="chevron-up"
