--- a/404.html
+++ b/404.html
@@ -19,7 +19,9 @@
     <header>
       <!-- desktop version, desaparece en mobile version -->
       <section class="desktop__header justify-content-between container">
-        <h1><a href="index.html">LOGO</a></h1>
+        <a href="index.html"
+          ><img src="./assets/img/logo.png" alt="logo" width="90"
+        /></a>
 
         <nav class="d-flex align-items-center">
           <ul class="ul__navbar d-flex m-0 p-0">
