--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header>
       <!-- desktop version, desaparece en mobile version -->
       <section class="desktop__header justify-content-between container">
-        <h1><a href="index.html">LOGO</a></h1>
+        <a href="index.html"
+          ><img src="./assets/img/logo.png" alt="logo" width="90"
+        /></a>
 
         <nav class="d-flex align-items-center">
           <ul class="ul__navbar d-flex m-0 p-0">
@@ -63,9 +65,12 @@
           justify-content-between
           align-items-center
           container
+          row
+          m-0
+          px-2
         "
       >
-        <section>
+        <section class="col-4 p-0 justify-content-start">
           <img
             src="assets/svg/list.svg"
             alt="list-icon"
@@ -81,8 +86,14 @@
             id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel"
           >
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel">LOGO</h5>
+            <div
+              class="offcanvas-header"
+              class="offcanvas-title"
+              id="offcanvasExampleLabel"
+            >
+              <a href="index.html"
+                ><img src="./assets/img/logo.png" alt="logo" width="60"
+              /></a>
               <i
                 alt="close-button"
                 type="button"
@@ -138,7 +149,11 @@
           </div>
         </section>
 
-        <h1 class="my-2">LOGO</h1>
+        <a href="index.html" class="col-4 p-0 d-flex justify-content-center"
+          ><img src="./assets/img/logo.png" alt="logo" width="60"
+        /></a>
+
+        <div class="col-4 p-0"></div>
       </section>
     </header>
 
