--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </section>
 
         <a href="index.html" class="col-4 p-0 d-flex justify-content-center"
-          ><img src="./assets/img/logo.png" alt="logo" width="60"
+          ><img src="./assets/img/logo.png" alt="logo" width="70"
         /></a>
 
         <div class="col-4 p-0"></div>
@@ -267,7 +267,10 @@
 
       <!-- Logo WhatsApp -->
       <div class="item-fixed container">
-        <a href="https://wa.link/988yaj"
+        <a
+          href="https://wa.me/5493402449859?text=Hola, cómo estás? Queria consultarte por una prenda que vi en el sitio web"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img src="./assets/svg/whatsapp.svg" alt="logo de WhatsApp"
         /></a>
       </div>
@@ -276,17 +279,26 @@
     <footer>
       <ul class="container">
         <li>
-          <a href="https://www.instagram.com/ropadeportiva_mf/?hl=es-la"
+          <a
+            href="https://www.instagram.com/ropadeportiva_mf/?hl=es-la"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="fab fa-instagram"></i> ropadeportiva_mf</a
           >
         </li>
         <li>
-          <a href="https://goo.gl/maps/A44rshH9tYgrhWUJA"
+          <a
+            href="https://goo.gl/maps/A44rshH9tYgrhWUJA"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="fas fa-map-marker-alt"></i> Showroom - Rosario Centro</a
           >
         </li>
         <li>
-          <a href="https://wa.link/988yaj"
+          <a
+            href="https://wa.me/5493402449859?text=Hola, cómo estás? Queria consultarte por una prenda que vi en el sitio web"
+            target="_blank"
+            rel="noopener noreferrer"
             ><i class="fab fa-whatsapp"></i> (3402) 44-9859</a
           >
         </li>
