--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 
         <nav class="d-flex align-items-center">
           <ul class="ul__navbar d-flex m-0 p-0">
-            <li><a href="">HOME</a></li>
+            <li><a href="./index.html">HOME</a></li>
             <li class="li__indumentaria">
               INDUMENTARIA
               <img
@@ -50,8 +50,10 @@
                 </div>
               </ul>
             </li>
-            <li><a href="">PREGUNTAS FRECUENTES</a></li>
-            <li><a href="">CONTACTO</a></li>
+            <li>
+              <a href="./preguntas-frecuentes.html">PREGUNTAS FRECUENTES</a>
+            </li>
+            <li><a href="./contacto.html">CONTACTO</a></li>
           </ul>
         </nav>
       </section>
@@ -63,9 +65,12 @@
           justify-content-between
           align-items-center
           container
+          row
+          m-0
+          px-2
         "
       >
-        <section>
+        <section class="col-4 p-0 justify-content-start">
           <img
             src="assets/svg/list.svg"
             alt="list-icon"
@@ -81,8 +86,14 @@
             id="offcanvasExample"
             aria-labelledby="offcanvasExampleLabel"
           >
-            <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasExampleLabel">LOGO</h5>
+            <div
+              class="offcanvas-header"
+              class="offcanvas-title"
+              id="offcanvasExampleLabel"
+            >
+              <a href="index.html"
+                ><img src="./assets/img/logo.png" alt="logo" width="60"
+              /></a>
               <i
                 alt="close-button"
                 type="button"
@@ -94,7 +105,7 @@
             <div class="offcanvas-body">
               <nav class="d-flex align-items-center">
                 <ul class="ul__navbar--mobile m-0 p-0">
-                  <li><a href="">HOME</a></li>
+                  <li><a href="./index.html">HOME</a></li>
                   <li class="li__indumentaria">
                     INDUMENTARIA
                     <img
@@ -126,15 +137,23 @@
                       <li class="tops" data-bs-dismiss="offcanvas">Tops</li>
                     </ul>
                   </li>
-                  <li><a href="">PREGUNTAS FRECUENTES</a></li>
-                  <li><a href="">CONTACTO</a></li>
+                  <li>
+                    <a href="./preguntas-frecuentes.html"
+                      >PREGUNTAS FRECUENTES</a
+                    >
+                  </li>
+                  <li><a href="./contacto.html">CONTACTO</a></li>
                 </ul>
               </nav>
             </div>
           </div>
         </section>
 
-        <h1 class="my-2">LOGO</h1>
+        <a href="index.html" class="col-4 p-0 d-flex justify-content-center"
+          ><img src="./assets/img/logo.png" alt="logo" width="70"
+        /></a>
+
+        <div class="col-4 p-0"></div>
       </section>
     </header>
 
