meta description y keywords agregadas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Bienvenido a nuestro catálogo online de ropa deportiva! Vas a encontrar todo nuestro stock y los mejores precios."
+    />
+    <meta
+      name="keywords"
+      content="ropa deportiva, showroom, rosario, envios, calzas, bikers, buzos, tops, shorts, camperas, joggers, lycra, sudaderas, imitación, adidas, nike, puma, pescadoras, remerones, remeras, kids, hombre, mujer, ropa, abrigos, conjuntos"
+    />
+    <title>Inicio | MF</title>
 
     <link rel="stylesheet" href="css/style.css" />
 
