db actualizada y carousel creado

--- a/index.html
+++ b/index.html
@@ -194,29 +194,7 @@
               aria-label="Slide 3"
             ></button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="assets/img/ropa-medioambiente-t.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-          </div>
+          <div class="carousel-inner"></div>
           <button
             class="carousel-control-prev"
             type="button"
@@ -330,12 +308,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyAHJtu7kxN_bRpDQMqvB--AMcQNtYd3-kE",
-        authDomain: "prueba-104e5.firebaseapp.com",
-        projectId: "prueba-104e5",
-        storageBucket: "prueba-104e5.appspot.com",
-        messagingSenderId: "799653477259",
-        appId: "1:799653477259:web:339c78ddf189271c97cd8e",
+        apiKey: "AIzaSyAJkgWFaoUDdU8gZSSVjYg0X7NSIxNyWl8",
+        authDomain: "ropadeportivamf-5e367.firebaseapp.com",
+        projectId: "ropadeportivamf-5e367",
+        storageBucket: "ropadeportivamf-5e367.appspot.com",
+        messagingSenderId: "56489515682",
+        appId: "1:56489515682:web:4e773067fc9baf35be55fb",
       };
 
       firebase.initializeApp(firebaseConfig);
